--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/Rabz-9/caradisiac#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "elasticsearch": "^14.2.0",
     "express": "^4.16.3",
     "node-car-api": "github:92bondstreet/node-car-api",
     "npm": "^5.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
